2008-01-26  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydesk.el (tinydesk-clear-buffer-properties):
	Remove also leading whitespace in fron tof comment ';;'
	markers. Remove `redraw-display'. Display message only
	when called interactively.
	(tinydesk-set-face-non-files-buffer): Move location of
	function.
	(tinydesk-set-face-non-files-region): Improve docstring.
	(tinydesk-read-word): Remove comment from read line.
	This fixes function.
	(tinydesk-handle-text-property): Removed extra `sleep-for'
	calls. Add extra space before comment, so that is is next
	to filename.
	(tinydesk-add-space-if-non-space): New.
	(tinydesk-handle-text-property): Use
	`tinydesk-add-space-if-non-space'.
	(tinydesk-mark-region): Use
	`tinydesk-add-space-if-non-space'.

2008-01-22  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tiny-setup.el (tiny-setup-compile-kit-libraries):
	Fix indentation.

2007-11-04  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinymail.el (tinymail-buffer-email-address-scramble-area):
	Typo 'nilt' => 'nil t' in `search-forward' call.

2007-10-09  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinymail.el (tinymail-buffer-email-address-scramble-area):
	Improve regexps to find diff start better.

2007-09-27  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-close):
	Corrected 'package' and 'version' information.

2007-09-25  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (tinylisp-find-autoload-functions):
	fix docstring typo.

	* tiny/tinylib.el (ti::package-autoload-create-on-file):
	Minor adjustment: if there are no function arguments,
	do not add trailing empty spaces to listing.

2007-09-19  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mode): Added
	`tinydebian-bts-mail-ctrl-merge'.
	(tinydebian-bts-mail-ctrl-merge): New.

2007-09-16  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-reportbug): Correct alias
	definition.

2007-09-06  Jari Aalto  <jari.aalto@cante.net>
